fixed pricing section align baseline

--- a/css/main.css
+++ b/css/main.css
@@ -4,12 +4,14 @@
     color: #12AAFB;
     text-transform: uppercase;
     font-size: 25px;
+    text-align: center;
 }
 
 .heading1 {
     font-size: 48px;
     font-weight: 700;
     margin-bottom: 20px;
+    text-align: center;
 }
 
 .paragraph1 {
@@ -17,6 +19,7 @@
     margin: auto;
     font-size: 20px;
     font-weight: 400;
+    text-align: center;
 }
 
 
@@ -160,7 +163,6 @@
     margin: auto;
     margin-top: 200px;
     scroll-margin-top: 110px;
-    text-align: center;
 }
 
 
